lync/tests/fails/application_type_mismatch.scm
(declare g (-> int int))

(define f
  (lambda ()
    (g true)))
